fix: display the correct style in the dark mode

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -1,6 +1,11 @@
 @import '../../utils/variables.scss';
 
 #layout {
+  a {
+    cursor: pointer;
+    color: inherit;
+  }
+
   svg {
     color: #6a737d;
     transition: color 0.8s;
